--- a/MyApp/src/app/Component/component3/component3.html
+++ b/MyApp/src/app/Component/component3/component3.html
@@ -1,5 +1,4 @@
-<div id="aboutus" class="section">
-  <!-- Top wave as background -->
+<!-- <div id="aboutus" class="section">
  <div class="custom-shape-divider-top-1757352988">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
@@ -27,12 +26,20 @@
       We believe in innovation, collaboration, and continuous learning.
     </p>
   </div>
+</div> -->
 
-  <!-- Bottom wave as background -->
-  <svg class="wave wave-bottom" viewBox="0 0 1440 150" preserveAspectRatio="none" aria-hidden="true">
-    <path d="M0,30 C360,120 720,0 1080,30 C1260,50 1440,20 1440,20 L1440,150 L0,150 Z" fill="#1e6eff"/>
-    <path d="M0,10 C360,100 720,-10 1080,10 C1260,30 1440,0 1440,0 L1440,150 L0,150 Z" fill="#c62828" opacity="0.95"/>
-  </svg>
+<div class="wave-container">
+  <div class="animate-section">
+    <div class="zoom-in">
+  <h1 style="color:rgb(255, 255, 255)">Home Page</h1>
+    <img src="/why us.jpg">
+            <p>In a world marked by rapid technological advancements, dynamic economic shifts, and a constantly changing global landscape, navigating these transformations poses a considerable
+              challenge for our people, clients, partners, and communities. At AASLIN Technologies.We don’t just build products—we build the future of technology. Our team consists of innovators, problem-solvers, and tech enthusiasts who are passionate about creating solutions that make a difference.
+      Problem solvers who thrive in a collaborative environment, creators who want to build scalable products that matter.</p>
+</div>
+</div>
+  <svg class="ani" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="0.95" d="M0,96L60,90.7C120,85,240,75,360,101.3C480,128,600,192,720,186.7C840,181,960,107,1080,96C1200,85,1320,139,1380,165.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+
 </div>
 
 
