--- a/MyApp/src/app/Component/component3/component3.html
+++ b/MyApp/src/app/Component/component3/component3.html
@@ -33,7 +33,7 @@
     We specialize in end-to-end software product development—from stunning front-end interfaces to
     robust back-end architectures and scalable full-stack solutions.
   </p>
-  <h2>Our Culture</h2>
+  <h2 style="color:#1d1636">Our Culture</h2>
   <p>
     We believe in innovation, collaboration, and continuous learning.
   </p>
@@ -82,7 +82,6 @@
 
 
 <!-- <div id="aboutus" class="section">
-<!-- <div id="aboutus" class="section">
  <div class="custom-shape-divider-top-1757352988">
     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
@@ -115,7 +114,6 @@
     <path d="M0,30 C360,120 720,0 1080,30 C1260,50 1440,20 1440,20 L1440,150 L0,150 Z" fill="#1e6eff"/>
     <path d="M0,10 C360,100 720,-10 1080,10 C1260,30 1440,0 1440,0 L1440,150 L0,150 Z" fill="#c62828" opacity="0.95"/>
   </svg>
-</div> -->
 </div> -->
 
 <div class="wave-container">
